<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".toast_snackbar.ToastSnackBar">

    <Button
        android:id="@+id/btn_show_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_show_toast"/>

    <Button
        android:id="@+id/btn_show_snackBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_show_snackBar"/>

    <Button
        android:id="@+id/btn_show_sanckBar_with_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_show_snackbar_with_action"/>

</LinearLayout>