<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".notifications.Notifications">

    <Button
        android:id="@+id/btn_send_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_send_notification"/>

    <Button
        android:id="@+id/btn_update_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/str_update_notification"/>

    <Button
        android:id="@+id/btn_delete_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_delete_notification"/>

</LinearLayout>